Update of gemfile with byebug gem and byebug history

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -10,3 +10,4 @@ gem 'terminal-table', '~> 1.8'
 gem 'tty-prompt', '~> 0.22.0'
 gem 'httparty', '~> 0.13.7'
 gem 'rubocop', '~> 0.92.0'
+gem 'byebug', '~> 9.0', '>= 9.0.6'
