Updated gemlist and generated example json

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -11,3 +11,4 @@ gem 'tty-prompt', '~> 0.22.0'
 gem 'httparty', '~> 0.13.7'
 gem 'rubocop', '~> 0.92.0'
 gem 'byebug', '~> 9.0', '>= 9.0.6'
+gem 'rspec', '~> 3.4'
