--- a/src/Gemfile
+++ b/src/Gemfile
@@ -12,3 +12,4 @@ gem 'httparty', '~> 0.13.7'
 gem 'rubocop', '~> 0.92.0'
 gem 'byebug', '~> 9.0', '>= 9.0.6'
 gem 'rspec', '~> 3.4'
+gem "json", ">= 2.3.0"
