--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,14 +1,14 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
+git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
+gem 'byebug', '~> 9.0', '>= 9.0.6'
 gem 'colorize', '~> 0.8.1'
+gem 'httparty', '~> 0.13.7'
+gem 'rspec', '~> 3.4'
+gem 'rubocop', '~> 0.92.0'
 gem 'terminal-table', '~> 1.8'
 gem 'tty-prompt', '~> 0.22.0'
-gem 'httparty', '~> 0.13.7'
-gem 'rubocop', '~> 0.92.0'
-gem 'byebug', '~> 9.0', '>= 9.0.6'
-gem 'rspec', '~> 3.4'
